src/test/deca/codegen/valid/sansObjetPourScript/rfloat.deca
{
    float x = 2;
    int y = 1;
    float z = x + y;
    println(z);
}
