src/test/deca/codegen/invalid/sansObjet/mod0.deca
{
    int x = 2;
    int y = 0;
    int z = x%y;
}
